Added second model

--- a/models/models.conf
+++ b/models/models.conf
@@ -4,4 +4,9 @@ model_config_list: {
     base_path: "/models/xray",
     model_platform: "tensorflow"
   }
+  config: {
+    name: "transferlearning",
+    base_path: "/models/transferlearning",
+    model_platform: "tensorflow"
+  }
 }
